# sdl_video_test

./: CMakeLists.txt  README.md  cmake_install.cmake  video.c
